--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -101,6 +101,11 @@
     --input-border: var(--light-grey);
     --input-placeholder: var(--light-grey);
 
+    --score-header-text: var(--white);
+    --score-text: var(--black);
+    --score-background: var(--dark-blue);
+    --score-category-background: var(--very-light-grey);
+
     --copyable-input-background: var(--very-very-light-grey);
     --copyable-input-border: var(--light-grey);
 
@@ -158,7 +163,11 @@
     --panel-button-text: var(--white);
     --panel-accent: var(--dark-grey);
 
-    --scta-avatar-gradient: linear-gradient(rgba(241, 241, 241, 0%) 0, rgba(241, 241, 241, 0%) 50%, rgba(241, 241, 241, 100%) 100%);
+    --scta-avatar-gradient: linear-gradient(
+        rgba(241, 241, 241, 0%) 0,
+        rgba(241, 241, 241, 0%) 50%,
+        rgba(241, 241, 241, 100%) 100%
+    );
     --scta-panel-accent: var(--pink);
     --ccta-panel-accent: var(--mid-blue);
     --ghcta-panel-accent: var(--pink);
@@ -233,6 +242,10 @@
         --input-border: var(--dark-grey);
         --input-placeholder: var(--grey);
 
+        --score-text: var(--white);
+        --score-background: var(--very-dark-blue);
+        --score-category-background: var(--very-dark-grey);
+
         --copyable-input-background: var(--very-very-dark-grey);
         --copyable-input-border: var(--dark-grey);
 
@@ -273,6 +286,10 @@
         --panel-button-background: var(--very-dark-grey);
         --panel-cta-background: var(--dark-grey);
 
-        --scta-avatar-gradient: linear-gradient(rgba(25, 25, 35, 0%) 0, rgba(25, 25, 35, 0%) 50%, rgba(25, 25, 35, 100%) 100%);
+        --scta-avatar-gradient: linear-gradient(
+            rgba(25, 25, 35, 0%) 0,
+            rgba(25, 25, 35, 0%) 50%,
+            rgba(25, 25, 35, 100%) 100%
+        );
     }
 }
