Added payment platform CSS styles.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -287,6 +287,41 @@
         }
     }
 
+    .funding-links {
+        .community-bridge {
+        }
+
+        .custom-url {
+        }
+
+        .github {
+        }
+
+        .issue-hunt {
+        }
+
+        .ko-fi {
+        }
+
+        .lfx-crowdfunding {
+        }
+
+        .liberapay {
+        }
+
+        .open-collective {
+        }
+
+        .otechie {
+        }
+
+        .patreon {
+        }
+
+        .tide-lift {
+        }
+    }
+
     @media screen and (max-width: $mobile-breakpoint) {
         .package-title h2 {
             -webkit-line-clamp: 2;
