I don’t know why this broke.

--- a/FrontEnd/styles/header_footer.scss
+++ b/FrontEnd/styles/header_footer.scss
@@ -68,7 +68,7 @@ header {
         align-items: center;
 
         img {
-            max-width: 64px;
+            width: 64px;
             margin-right: 10px;
         }
     }
