I now DO know why this changed!

--- a/FrontEnd/styles/header_footer.scss
+++ b/FrontEnd/styles/header_footer.scss
@@ -68,7 +68,7 @@ header {
         align-items: center;
 
         img {
-            width: 64px;
+            max-width: 64px;
             margin-right: 10px;
         }
     }
