Initial styling for funding links.

--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -163,6 +163,8 @@
     --panel-button-text: var(--white);
     --panel-accent: var(--dark-grey);
 
+    --package-funding-background: var(--very-light-grey);
+
     --scta-avatar-gradient: linear-gradient(
         rgba(241, 241, 241, 0%) 0,
         rgba(241, 241, 241, 0%) 50%,
