--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -299,8 +299,8 @@
         &::after {
             content: '';
             position: absolute;
-            top: -10px;
-            right: 0;
+            top: -8px;
+            right: 5px;
             width: 25px;
             height: 100%;
             background-repeat: no-repeat;
