Dark mode support.

--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -288,6 +288,8 @@
         --panel-button-background: var(--very-dark-grey);
         --panel-cta-background: var(--dark-grey);
 
+        --package-funding-background: var(--very-dark-grey);
+
         --scta-avatar-gradient: linear-gradient(
             rgba(25, 25, 35, 0%) 0,
             rgba(25, 25, 35, 0%) 50%,
