--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -163,6 +163,8 @@
     --panel-button-text: var(--white);
     --panel-accent: var(--dark-grey);
 
+    --package-funding-background: var(--very-light-grey);
+
     --scta-avatar-gradient: linear-gradient(
         rgba(241, 241, 241, 0%) 0,
         rgba(241, 241, 241, 0%) 50%,
@@ -285,6 +287,8 @@
 
         --panel-button-background: var(--very-dark-grey);
         --panel-cta-background: var(--dark-grey);
+
+        --package-funding-background: var(--very-dark-grey);
 
         --scta-avatar-gradient: linear-gradient(
             rgba(25, 25, 35, 0%) 0,
