--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -17,6 +17,7 @@
 $mobile-breakpoint: 740px;
 
 @import 'styles/base';
+@import 'styles/blog';
 @import 'styles/breadcrumbs';
 @import 'styles/build_logs';
 @import 'styles/build_monitor';
@@ -36,11 +37,11 @@ $mobile-breakpoint: 740px;
 @import 'styles/overflowing_list';
 @import 'styles/package_list';
 @import 'styles/package';
+@import 'styles/panel_button';
 @import 'styles/readme';
 @import 'styles/search_results';
 @import 'styles/search';
 @import 'styles/spinner';
-@import 'styles/tab_bar';
 @import 'styles/supporters';
-@import 'styles/panel_button';
+@import 'styles/tab_bar';
 @import 'styles/validate_manifest';
