--- a/FrontEnd/styles/blog.scss
+++ b/FrontEnd/styles/blog.scss
@@ -49,4 +49,16 @@ body.blog {
             }
         }
     }
+
+    article.blog-post {
+        picture.shadow img {
+            box-shadow: 0 3px 8px 2px rgba(100, 100, 100, 20%);
+        }
+
+        img {
+            display: block;
+            max-width: 80%;
+            margin: 40px auto;
+        }
+    }
 }
