--- a/FrontEnd/styles/panel_button.scss
+++ b/FrontEnd/styles/panel_button.scss
@@ -17,7 +17,14 @@
 // -------------------------------------------------------------------------
 
 .panel-button {
-    transition: box-shadow 0.15s ease, transform 0.15s ease;
+    transition:
+        box-shadow 0.15s ease,
+        transform 0.15s ease;
+
+    h3 {
+        margin: 0 0 10px;
+        font-size: 20px;
+    }
 
     a {
         display: flex;
