Moved Highlight.js into the main JavaScript pipeline.

--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -13,6 +13,7 @@
 // limitations under the License.
 
 @use 'normalize.css/normalize.css';
+@use 'highlight.js/styles/atom-one-dark.css';
 
 $mobile-breakpoint: 740px;
 
