New layout for the blog index.

--- a/FrontEnd/styles/blog.scss
+++ b/FrontEnd/styles/blog.scss
@@ -52,6 +52,9 @@ body.blog {
     }
 
     ul.blog-posts {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
         padding: 0;
         list-style: none;
 
