--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -177,6 +177,8 @@
     --podcast-panel-background: var(--very-light-blue);
 
     --avatar-shadow: 0 2px 2px 3px rgba(0, 0, 0, 5%);
+
+    --rss-subscribe-color: var(--orange);
 }
 
 // Dark mode.
