Force percy to run.

--- a/FrontEnd/styles/base.scss
+++ b/FrontEnd/styles/base.scss
@@ -21,17 +21,8 @@
 }
 
 body {
-    font-family:
-        -apple-system,
-        BlinkMacSystemFont,
-        'SF Hello',
-        'Segoe UI',
-        Roboto,
-        'Helvetica Neue',
-        Arial,
-        sans-serif,
-        'Apple Color Emoji',
-        'Segoe UI Emoji';
+    font-family: -apple-system, BlinkMacSystemFont, 'SF Hello', 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif,
+        'Apple Color Emoji', 'Segoe UI Emoji';
     font-size: 16px;
     line-height: 1.4;
     color: var(--page-text);
