Clean up and preparation for a double-spec chart version.

--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -46,3 +46,4 @@ $mobile-breakpoint: 740px;
 @import 'styles/supporters';
 @import 'styles/tab_bar';
 @import 'styles/validate_manifest';
+@import 'styles/vega_charts';
