--- a/FrontEnd/styles/vega_charts.scss
+++ b/FrontEnd/styles/vega_charts.scss
@@ -21,6 +21,7 @@ div[data-controller='vega-chart'] {
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    color: var(--black);
     background-color: var(--very-very-light-grey);
     border: 1px solid var(--light-grey);
 
