Added a FAQ about the charts.

--- a/FrontEnd/styles/vega_charts.scss
+++ b/FrontEnd/styles/vega_charts.scss
@@ -16,6 +16,8 @@
 // Charts, initially for the Ready for Swift 6 page.
 // -------------------------------------------------------------------------
 
+[Sahand Nayebaziz](https://twitter.com/sahandnayebaziz)
+
 div[data-controller='vega-chart'] {
     display: flex;
     flex-direction: column;
