Added the package page data race safety metadata item.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -136,6 +136,10 @@
                 background-image: var(--image-macros);
             }
 
+            li.data-race-safe {
+                background-image: var(--image-checkered-flag);
+            }
+
             li.keywords {
                 grid-column-start: span 2;
                 background-image: var(--image-tags);
