--- a/FrontEnd/styles/layout.scss
+++ b/FrontEnd/styles/layout.scss
@@ -47,6 +47,14 @@ main > .inner {
     }
 }
 
+.center-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
 @media screen and (max-width: $mobile-breakpoint) {
     .two-column {
         display: flex;
