Tweaked CSS class names.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -136,7 +136,7 @@
                 background-image: var(--image-macros);
             }
 
-            li.data-race-safe {
+            li.data-race-safety {
                 grid-column-start: span 2;
                 background-image: var(--image-checkered-flag);
             }
