--- a/FrontEnd/styles/home.scss
+++ b/FrontEnd/styles/home.scss
@@ -58,4 +58,16 @@ body.home {
     display: flex;
     flex-direction: column;
     gap: 15px;
+
+    .ccta picture {
+        width: 100%;
+        height: 60px;
+        text-align: center;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
 }
