Basics of a front-end debug console.

--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -24,6 +24,7 @@ $mobile-breakpoint: 740px;
 @import 'styles/build_monitor';
 @import 'styles/colors';
 @import 'styles/copyable_input';
+@import 'styles/debug_console';
 @import 'styles/error';
 @import 'styles/github_highlighting';
 @import 'styles/header_footer';
