--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -22,14 +22,11 @@ $mobile-breakpoint: 740px;
 @import 'styles/breadcrumbs';
 @import 'styles/build_logs';
 @import 'styles/build_monitor';
-@import 'styles/colors';
 @import 'styles/copyable_input';
-@import 'styles/debug_console';
 @import 'styles/error';
 @import 'styles/github_highlighting';
 @import 'styles/header_footer';
 @import 'styles/home';
-@import 'styles/images';
 @import 'styles/keywords';
 @import 'styles/layout';
 @import 'styles/maintainer_info';
@@ -46,5 +43,6 @@ $mobile-breakpoint: 740px;
 @import 'styles/spinner';
 @import 'styles/supporters';
 @import 'styles/tab_bar';
+@import 'styles/utility';
 @import 'styles/validate_manifest';
 @import 'styles/vega_charts';
