Let’s do a slightly thicker line on the alert notes.

--- a/FrontEnd/styles/readme.scss
+++ b/FrontEnd/styles/readme.scss
@@ -94,7 +94,7 @@
     .markdown-alert {
         padding-left: 15px;
         fill: currentColor;
-        border-left: solid;
+        border-left: solid 3px;
     }
 
     .markdown-alert-title {
