change alert text color based on light/dark mode

--- a/FrontEnd/styles/readme.scss
+++ b/FrontEnd/styles/readme.scss
@@ -111,7 +111,7 @@
     }
 
     .markdown-alert p:nth-child(2) {
-        color: black;
+        color: var(--page-text);
     }
 
     .markdown-alert-title svg {
