--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -30,6 +30,7 @@ $mobile-breakpoint: 740px;
 @import 'styles/keywords';
 @import 'styles/layout';
 @import 'styles/maintainer_info';
+@import 'styles/maintenance';
 @import 'styles/markdown';
 @import 'styles/matrix';
 @import 'styles/modal_panel';
