Added Icon and style for `forked` metadata item.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -75,6 +75,11 @@
                 background-image: var(--image-warning);
             }
 
+            li.forked {
+                grid-column-start: span 2;
+                background-image: var(--image-fork);
+            }
+
             li.authors {
                 grid-column-start: span 2;
                 background-image: var(--image-authors);
