This is a better way to hide the loading indicator.

--- a/FrontEnd/styles/readme.scss
+++ b/FrontEnd/styles/readme.scss
@@ -146,7 +146,8 @@
     }
 
     section[data-type='mermaid'] {
-        pre {
+        pre,
+        .js-render-enrichment-loader {
             display: none;
         }
 
