--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -159,12 +159,22 @@
 
             li.custom-collections {
                 grid-column-start: span 2;
-                background-image: var(--image-tags);
+                background-image: var(--image-custom-collections);
 
                 a {
-                    display: flex;
-                    gap: 5px;
-                    align-items: center;
+                    vertical-align: baseline;
+
+                    .badge {
+                        position: relative;
+                        top: -1px;
+                        margin-right: 3px;
+                        padding: 1px 5px;
+                        font-size: 12px;
+                        font-weight: 600;
+                        color: var(--custom-collections-badge-text);
+                        background-color: var(--custom-collections-badge-background);
+                        border-radius: 3px;
+                    }
                 }
             }
         }
@@ -199,7 +209,7 @@
             }
         }
 
-        .custom-collections {
+        .custom-collections-sidebar {
             display: flex;
             flex-direction: column;
 
