Make the lozenge highlight when the link is hovered.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -175,6 +175,13 @@
                         background-color: var(--custom-collections-badge-background);
                         border-radius: 3px;
                     }
+
+                    &:hover {
+                        .badge {
+                            color: var(--white);
+                            background-color: var(--link-highlight);
+                        }
+                    }
                 }
             }
         }
