--- a/FrontEnd/styles/home.scss
+++ b/FrontEnd/styles/home.scss
@@ -73,12 +73,20 @@ body.home {
 }
 
 .ccta-availability {
-    padding: 10px;
+    padding: 15px;
     font-size: 13px;
     background-color: var(--panel-button-background);
+
+    p {
+        margin: 5px 0;
+    }
 
     .support {
         margin: 0 0 5px;
         font-weight: bold;
+    }
+
+    .cta {
+        text-align: right;
     }
 }
