--- a/FrontEnd/docc.scss
+++ b/FrontEnd/docc.scss
@@ -22,17 +22,8 @@ header.spi,
 footer.spi {
     position: sticky;
     width: 100%;
-    font-family:
-        -apple-system,
-        BlinkMacSystemFont,
-        'SF Hello',
-        'Segoe UI',
-        Roboto,
-        'Helvetica Neue',
-        Arial,
-        sans-serif,
-        'Apple Color Emoji',
-        'Segoe UI Emoji' !important;
+    font-family: -apple-system, BlinkMacSystemFont, 'SF Hello', 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif,
+        'Apple Color Emoji', 'Segoe UI Emoji' !important;
     font-size: 16px;
     line-height: 1.4;
     color: var(--header-text);
