minor front-end styling and renaming

--- a/FrontEnd/styles/portal.scss
+++ b/FrontEnd/styles/portal.scss
@@ -16,12 +16,12 @@
 // Styles for authentication pages (login, signup, etc.)
 // -------------------------------------------------------------------------
 
-.manage-page {
+.portal-page {
     height: 55vh;
     padding-top: 10%;
 }
 
-.manage-form-inputs {
+.portal-form-inputs {
     display: flex;
     flex-direction: column;
     width: 50%;
