--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -46,4 +46,4 @@ $mobile-breakpoint: 740px;
 @import 'styles/tab_bar';
 @import 'styles/validate_manifest';
 @import 'styles/vega_charts';
-@import 'styles/manage';
+@import 'styles/portal';
