Better naming for the form container div.

--- a/FrontEnd/styles/portal.scss
+++ b/FrontEnd/styles/portal.scss
@@ -16,9 +16,9 @@
 // Styles for authentication pages (login, signup, etc.)
 // -------------------------------------------------------------------------
 
-.portal-page {
+.portal-form-container {
     height: 55vh;
-    padding-top: 10%;
+    padding: 10%;
 }
 
 .portal-form-inputs {
